test-crates/duchess-java-tests/tests/rust-to-java/interface_class_mismatch_specified.rs
duchess::java_package! {
    package exceptions;

    public interface ThrowExceptions { } //~ ERROR: error in class
}

fn main() {}
